Fix usernames not cutting off correctly

--- a/src/components/MainPage/Games/Game/Game.module.css
+++ b/src/components/MainPage/Games/Game/Game.module.css
@@ -71,6 +71,7 @@
 .name {
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
     margin: 0;
     color: #bbbbbb;
 }
