--- a/src/components/MainPage/RecentlyPlayed/Player/Player.module.css
+++ b/src/components/MainPage/RecentlyPlayed/Player/Player.module.css
@@ -54,6 +54,9 @@
     color: white;
     font-size: 0.9rem;
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .wr {
